--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -1,6 +1,11 @@
 
+#text-toolbar-wrapper{
+    width:100%;
+}
+
 #messages{
     overflow-y:auto;
+    width:100%;
 }
 #session-id
 {
@@ -20,36 +25,49 @@
 #canvas-wrapper
 {
     background-color: rgb(206, 206, 206);
-    width:49%;
+    width:49.5%;
     height:100%;
 
 }
 #chat-wrapper
 {
     position:relative;
-
     background-color: rgb(206, 206, 206);
-    width:49%;
+    width:49.5%;
     height:100%;
+    overflow-y: scroll;
     
 
 }
-#divider
+#divider-wrapper
 {
-    background-color: #33658d;
-    width:2%;
+    background-color: rgb(95, 68, 168);
+    width:1%;
     height:100%;
     cursor:e-resize;
+    padding:5px
+}
+#divider
+{
+    background-color:rgba(68, 68, 68,1);
+    width:100%;
+    height:100%;
+
 }
 
-#texttoolbar
+#text-area-wrapper-master
 {
-    height:50px;
+    width:100%;
     position:absolute;
-    bottom:50px;
-    transform: translate(-50%, 0);
+    bottom:0;
+}
+#text-area-wrapper
+{
+    position:absolute;
+    width:70%;
     left:50%;
-    width:50%;
+    bottom: 0;
+    transform: translate(-50%, 0);
 }
 #chatbar
 {
@@ -67,7 +85,7 @@
 }
 #customisers *
 {
-    padding-right: 10px;
+    padding-right: 5px;
 }
 
 
