--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -29,6 +29,10 @@
     height:100%;
 
 }
+.card, .message
+{
+    background-color: red;
+}
 #chat-wrapper
 {
     position:relative;
@@ -36,6 +40,9 @@
     width:49.5%;
     height:100%;
     overflow-y: scroll;
+    display:flex;
+    flex-direction: column;
+    padding: 20px;
     
 
 }
@@ -45,7 +52,9 @@
     width:1%;
     height:100%;
     cursor:e-resize;
-    padding:5px
+    padding:5px;
+    padding-top:5px;
+    padding-bottom: 0;
 }
 #divider
 {
@@ -54,36 +63,49 @@
     height:100%;
 
 }
-
-#text-area-wrapper-master
+#messages
 {
     width:100%;
-    position:absolute;
-    bottom:0;
+    height:80%;
+    border-radius: 10px;
+    overflow-y: auto;
+    display:flex;
+    flex-direction: column-reverse;
 }
+
+
 #text-area-wrapper
 {
     position:absolute;
-    width:70%;
+    width:50%;
+    
     left:50%;
-    bottom: 0;
+    bottom: 10px;
     transform: translate(-50%, 0);
 }
 #chatbar
-{
-    height:100%;
+{   
     border-radius: 5px;
     width:100%;
     border-color: rgb(95, 68, 168);
     margin-bottom: 5px;
 }
-#customisers-wrapper, #customisers
+
+
+#widgets,#widgets-wrapper
 {
     display:flex;
     flex-direction: row;
     width:100%;
 }
-#customisers *
+#post
+{
+    padding:0;
+    margin:0;
+    border:0;
+}
+
+#widgets *
 {
     padding-right: 5px;
 }
