--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -13,6 +13,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/hubbase.css">
+
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/191b087c0a.js" crossorigin="anonymous"></script>
     {% block head %}
 
     
@@ -23,37 +31,63 @@
 <body>
     
 
-    <div id="topbar">
-        <div id="namestrip">
-            <h1>justask</h1>
+    <div class="wrapper">
+        <nav id="sidebar">
+ 
+            <ul class="list-unstyled components">
+                <li>
+                    <a id="profile-button" class="active" href="#"><i class="fa-regular fa-user fa-lg"></i></a>
+                </li>
+                <li>
+                    <a id = "manage-sessions" href="/session"><i class="fa-solid fa-phone fa-lg"></i></a>
+                </li>
+                
+                <li>
+                    <a href="#"><i class="fa-solid fa-power-off fa-lg"></i></a>
+                    
+                </li>
+            </ul>
+
+        </nav>
+        
+        <div id="content-wrapper">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                
+                <div class="container-fluid">
+                    <h1>justask</h1>
+                    <button type="button" id="sidebarCollapse" class="navbar-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+    
+                </div>
+            </nav>
+
+            <div id="content">
+                {% block content %}
+                {% endblock %}
+            </div>
+        
         </div>
-
-        <ul id="navbar">
-            <li>
-                <a href="#">Profile</a>
-            </li>
-            <li>
-                <a href="{{ url_for('session') }}">Sessions</a>
-            </li>
-            <li>
-                <a>Sketchpad</a>
-            </li>
-            <li>
-                <a>Settings</a>
-            </li>
-        </ul>
+        
     </div>
-    <div id="content">
-        <script>
-            $(document).ready(function(){
-                topBarheight = $('#topbar').height()
-                $('#content').css({"height": "calc(100vh - " + topBarheight + "px" + ")", "margin-top" : topBarheight});
-            })
-        </script>
-        {% block content %}
-        {% endblock %}
 
-    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+                $(this).toggleClass('active');
+            });
+        });
+    </script>
 
 
 
