--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -15,8 +15,11 @@
 
 {% endblock %}
 
-{% block content %}
+{% block content_name %}
+Chat
+{% endblock %}
 
+{% block content %}
 
 <div id="media-wrapper">
     <div id="canvas-wrapper">
@@ -60,10 +63,6 @@
     </div>
 </div>
 <script src="../static/client.js"></script>
-
-
-
-
         
 
 {% endblock %}
