--- a/chat-app/templates/session.html
+++ b/chat-app/templates/session.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" href="./static/css/session.css">
 {% endblock %}
 
-
+{% block content_name %}
+Session
+{% endblock %}
 {% block content %}
 
 <script>
