--- a/chat-app/static/css/hubbase.css
+++ b/chat-app/static/css/hubbase.css
@@ -2,16 +2,50 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
 
+
+
+
+.message_wrapper{
+    display:flex;
+    flex-direction: column;
+    justify-content: left;
+}
+.message_wrapper *
+{
+    background-color: transparent;
+}
+.message-header{
+    display:flex;
+    flex-direction: row;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background: rgb(206,206,206);
 }
 html,body, .wrapper{
     height:100%;
+    background: rgb(206,206,206);
+    
+}
+
+#content-name
+{
+    width:100%;
+    background-color:rgb(95, 68, 168);
+    padding:8px 16px;
+
+}
+#content-name p{
+    font-size:20px;
+    color:rgb(206,206,206);
+    padding:0;
+    margin:0;
 }
 
 h1{
     color:white;
+
 }
 
 p {
@@ -33,7 +67,7 @@ a, a:hover, a:focus {
     background: rgb(95, 68, 168);
     border: none;
     border-radius: 0;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
@@ -160,7 +194,13 @@ a.article, a.article:hover {
 #content{
     width:100%;
     height:100%;
+    overflow:auto;
+    box-shadow: 10px 10px 8px #888888;
+    border-left: 2px solid rgba(136,136,136,0.2);
+    
+    
 }
+
 #sidebarCollapse {
     width: 40px;
     height: 40px;
