--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -1,6 +1,44 @@
 
 
 
+#flair-popup
+{
+    background-color: black;
+    width:100px;
+    height:100px;
+    text-align:center;
+    overflow:auto;
+
+}
+#flairs
+{
+    display:flex;
+    flex-direction: column;
+    height:100%;
+    width:100%;
+    list-style-type: none;
+    padding:0;
+    margin:0;
+}
+
+.flair{
+    width:100%;
+    background-color: red;
+}
+
+.form-check
+{
+    display:flex;
+    flex-direction: row;
+    width:100%;
+    padding:0;
+    left:0;
+    margin:0;
+    color:white;
+}
+
+
+
 #text-toolbar-wrapper{
     width:100%;
 }
