--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -8,10 +8,10 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>My Chat App</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://cdn.socket.io/3.1.3/socket.io.min.js"></script>
     <script src="https://kit.fontawesome.com/191b087c0a.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 {% endblock %}
 
@@ -34,6 +34,21 @@ Chat
             <p id="session-id">Session ID:  {{ room }}</p>
         </strong>
 
+        <div id="flair-popup">
+            <ul id="flairs">
+                <li class = "flair">
+                    Question
+                </li>
+                <li class = "flair">
+                    Message
+                </li>
+                <li class = "flair">
+                    Request
+                </li>
+
+             
+            </ul>
+        </div>
         <div id="messages">
             
         </div>
@@ -55,13 +70,12 @@ Chat
     
                 </div>
             </div>
-   
-
-
-            
-        
     </div>
 </div>
+
+
+
+
 <script src="../static/client.js"></script>
         
 
@@ -72,4 +86,7 @@ Chat
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+
 {% endblock %}
