--- a/chat-app/static/css/landingpage.css
+++ b/chat-app/static/css/landingpage.css
@@ -40,6 +40,14 @@ body {
   height: calc(100% - 2px); /* for borders */
   top:0;
   left:0;
+/* 
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px); */
+  filter: blur(3px);
+
+  
 }
 body {
   height: 100vh;
