--- a/chat-app/static/css/profile.css
+++ b/chat-app/static/css/profile.css
@@ -1,19 +1,10 @@
 
-#user-information-wrapper{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    color:white;
-    background-color: transparent;
-    list-style-type: none;
-    padding:20px;
-    margin:0;
-}
 .user-information
 {
     display:flex;
     flex-direction:row;
     padding:10px;
+    padding-left:10%;
 }
 .user-information p
 {
@@ -23,13 +14,79 @@
 {
     overflow:hidden;
 }
-#profile-settings-wrapper
-{
 
-    background-color: red;
-    margin-left:20%;
-    margin-right:20%;
-    margin-top:100px;
-    margin-bottom:100px;
+
+#settings-wrapper
+{
+    display:flex;
+    flex-direction: row;
+    
+    background-color: rgb(129,96,217);
+    width:50%;
+    height:50%;
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    border-radius:30px;
+    color:white;
+
+
+}
+#settings-navigation-wrapper
+{
+    background-color: rgb(95, 68, 168);
 }
 
+#settings-navigation{
+    list-style-type: none;
+    position:relative;
+    padding:5px;
+}
+#settings{
+    width:100%;
+}
+.profile-information{
+    color:white;
+}
+.setting{
+    padding:10px;
+    cursor:pointer;
+}
+form{
+    position:absolute;
+    visibility:hidden;
+    opacity: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+
+
+
+    /* TO DO -- CENTER THIS!!*/ 
+
+    
+    /* left:50%;
+    transform:translate(-50%,0) */
+    
+
+}
+
+
+.form-elements{
+    list-style-type: none;
+    padding:0;
+    margin:0;
+}
+
+.information-wrapper
+{
+    padding:20px;
+    display:flex;
+    flex-direction: column;
+}
+.submit{
+    margin-top:20px;
+}
