--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -8,35 +8,109 @@ Profile
 {% endblock %}
 
 {% block content %}
-    <div id="profile-settings-wrapper">
 
-        <ul id="user-information-wrapper">
-            <li class = "user-information">    
-                <p>First Name: </p>
-                <input type="text" placeholder="{{firstname}}">
-            </li>
-            <li class = "user-information">    
-                <p>Last Name: </p>
-                <input type="text" placeholder="{{lastname}}">
-            </li>
-            <li class = "user-information">    
-                <p>Username: </p>
-                <input type="text" placeholder="{{username}}">
-            </li>
-            <li class = "user-information">    
-                <p>Email Address: </p>
-                <input type="text" placeholder="{{email}}">
-            </li>
-            <li class = "user-information">    
-                <p>Password: </p>
-                <input type="text" placeholder="********">
-            </li>
 
+
+    <div id="settings-wrapper">
+
+        <div id="settings-navigation-wrapper">
+            <ul id="settings-navigation">
+                <li id="profile-setting" class="setting">
+                    <a>Edit Profile</a>
+                </li>
+                <li id="password-setting" class="setting">
+                    <a>Change Password</a>
+                </li>
+          
+            </ul>
+        </div>
+        <div id="settings">
+            <form action="/profile/" method = "post" id="profile-form">
+
+                <div class="information-wrapper">
+                    <ul class="form-elements" id="edit-profile-wrapper">
+                        <li class = "profile-information">    
+                            <p>First Name: </p>
+                            <input name="firstname" type="text" placeholder="{{firstname}}">
+                        </li>
+                        <li class = "information profile-information">    
+                            <p>Last Name: </p>
+                            <input name="lastname" type="text" placeholder="{{lastname}}">
+                        </li>
+                        <li class = "information profile-information">    
+                            <p>Username: </p>
+                            <input name="username" type="text" placeholder="{{username}}">
+                        </li>
+                        <li class = "information profile-information">    
+                            <p>Email Address: </p>
+                            <input name="email" type="text" placeholder="{{email}}">
+                        </li>
+                    </ul>
+                    <button id="submit-profile" class="submit">Submit</button>
+                </div>
+
+            </form>
+
+            <form action="/profile/" method = "post" id="password-form">
+                <div class="information-wrapper">
+                    <ul class = "form-elements" id="change-password-wrapper">
+                        <li class = "information password-information">    
+                            <p>Old Password: </p>
+                            <input name="firstname" type="text">
+                        </li>
+                        <li class = "information password-information">    
+                            <p>New Password: </p>
+                            <input name="firstname" type="text">
+                        </li>
+                        <li class = "password-information">    
+                            <p>Confirm New Password: </p>
+                            <input name="firstname" type="text">
+                        </li>
+                    </ul>
+                    <button id="submit-password" class="submit">Submit</button>
+
+                </div>
+               
        
-        </ul>
+            </form>
+        </div>
+        
     </div>
         
   
 
+    <script>
+
+        $(document).ready(function(){
+            
+        
+            $('#profile-setting').click(ShowProfileSettings)
+            $('#password-setting').click(ShowPasswordSettings)
+
+            profile_form = $('#profile-form');
+            password_form = $('#password-form');
+
+
+            function ShowProfileSettings()
+            {
+                profile_form.css({"visibility" : "visible"});
+                password_form.css({"visibility" : "hidden"});
+
+                profile_form.css({"opacity" : "1"});
+                password_form.css({"opacity" : "0"});
+            }
+            function ShowPasswordSettings()
+            {
+                profile_form.css({"visibility" : "hidden"});
+                password_form.css({"visibility" : "visible"});
+
+                password_form.css({"opacity" : "1"});
+                profile_form.css({"opacity" : "0"});
+            }
+            ShowProfileSettings();
+        });
+
+
+    </script>
 
 {% endblock %}
