--- a/chat-app/static/css/chat.css
+++ b/chat-app/static/css/chat.css
@@ -63,7 +63,7 @@
     flex-direction: row;
     height:100%;
 }
-#canvas-wrapper
+#canvas-master-wrapper
 {
     background-color: rgb(206, 206, 206);
     width:49.5%;
@@ -91,12 +91,19 @@
     height:100%;
     cursor:e-resize;
     padding-bottom: 0;
+    padding-left:5px;
+    padding-right:5px;
+    border: 2px solid black;
+    border-top:0;
+    border-bottom:0;
 }
-#divider
+.divider
 {
-    background-color:rgba(68, 68, 68,1);
+    background-color:rgb(255, 255, 255);
     width:100%;
     height:100%;
+    border-radius: 5px;
+    border: 2px solid rgb(0, 0, 0)
 
 }
 #messages
@@ -146,22 +153,34 @@
     padding-right: 5px;
 }
 .message-wrapper{
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 6px 6px rgba(0, 0, 0, 0.1);
+    display:flex;
+    flex-direction: column;
+    background-color: white;
+    padding:10px;
+    border-radius: 10px;
+    width:40%;
+    margin:5px;
 }
+
+
 .message-wrapper.native .message-payload{
     background-color: rgb(95, 68, 168);
+
 
 }
 .message-wrapper.foreign .message-payload{
     background-color: rgb(129,96,217);
+
 }
-.message-wrapper.native *{
+.message-wrapper.native{
     float:left;
 }
-.message-wrapper.foreign *{
+.message-wrapper.foreign{
     float:right
 }
 .message-wrapper p{
+
     padding:0;
     margin:0;
     padding-right:3px;
@@ -174,12 +193,8 @@
 .message-payload{
     border: 1px solid black;
     border-radius: 5px;
+    font-size:15px;
+    width:100%;
+    padding:5px;
 }
-
-
-
-
-
-
-
 
