--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -14,6 +14,20 @@
     <script src="https://kit.fontawesome.com/191b087c0a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href="./static/css/canvas.css"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.2.0/fabric.all.min.js"
+    ></script>
+
 {% endblock %}
 
 {% block content_name %}
@@ -24,11 +38,58 @@ Chat
 
 
 <div id="media-wrapper">
-    <div id="canvas-wrapper">
+    <div id="canvas-master-wrapper">
+        <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='client.js') }}"></script>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/521/fabric.min.js" integrity="sha512-nPzvcIhv7AtvjpNcnbr86eT6zGtiudLiLyVssCWLmvQHgR95VvkLX8mMpqNKWs1TG3Hnf+tvHpnGmpPS3yJIgw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- <script>
+        init();
+        </script> -->
+
+
+        <script
+        type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.2.0/fabric.all.min.js"
+      ></script>
+
+        <!-- <div id="toolkit">
+            <input type="color" id="colorPicker">
+            <label id="strokePx" ></label>
+            <input type="range" id="slide" min = "1" max = "100" value="3">
+        </div> -->
+
+        <canvas style="left: -300px; border: 2px solid; " height="485" width="632" id="c"></canvas>
+        <li style="margin-top:10px;">
+                  <button id="drawing-mode" class="btn btn-info">Enter drawing mode</button>
+                  <div style="display: none;" id="drawing-mode-options">
+                    <label for="drawing-mode-selector">Mode:</label>
+                    <select id="drawing-mode-selector">
+                      <option>Pencil</option>
+                      <option>Circle</option>
+                      <option>Spray</option>
+                      <option>Pattern</option>
+                      <option>hline</option>
+                      <option>vline</option>
+                      <option>square</option>
+                      <option>diamond</option>
+                      <option>texture</option>
+                    </select><br>
+                    <label for="drawing-line-width">Line width:</label>
+                    <input type="range" value="30" min="0" max="150" id="drawing-line-width"><br>
+                    <label for="drawing-color">Line color:</label>
+                    <input type="color" value="#005E7A" id="drawing-color"><br>
+                    <label for="drawing-shadow-width">Line shadow width:</label>
+                    <input type="range" value="0" min="0" max="50" id="drawing-shadow-width"><br>
+                  </div>
+          </li>
+          <script src="../static/canvas.js"></script>
+         
     </div>
+
+
     <div id="divider-wrapper">
-        <div ></div>
+        <div class="divider"></div>
     </div>
 
     <div id="chat-wrapper">
